修改页面图片根据语种实时切换

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>吉象卡包官网</title>
+  <title>Auspicious Elephant Coin</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
